--- a/single-page.html
+++ b/single-page.html
@@ -422,7 +422,7 @@
                         <div class="column">
                             <div class="products one flexwrap">
                                 <div class="row">
-                                    <div class="item">
+                                    <div class="item is_sticky">
                                         <div class="price">
                                             <span class="discount">32% <br>OFF</span>
                                         </div>
@@ -560,7 +560,7 @@
                                             </div>
                                             <div class="description collapse">
                                                 <ul>
-                                                    <li class="has-child">
+                                                    <li class="has-child expand">
                                                         <a href="#0" class="icon-small">Information</a>
                                                         <ul class="content">
                                                             <li><span>Brands</span> <span>Nike</span></li>
@@ -629,6 +629,136 @@
                                                                     </tr>
                                                                 </tbody>
                                                             </table>
+                                                        </div>
+                                                    </li>
+                                                    <li class="has-child expand">
+                                                        <a href="#0" class="icon-small">Reviews <span
+                                                                class="mini-text">2.5K</span></a>
+                                                        <div class="content">
+                                                            <div class="reviews">
+                                                                <h4>Customers Reviews</h4>
+                                                                <div class="review-block">
+                                                                    <div class="review-block-head">
+                                                                        <div class="flexitem">
+                                                                            <span class="rate-sum">4.9</span>
+                                                                            <span>2,251 Reviews</span>
+                                                                        </div>
+                                                                        <a href="#review-form"
+                                                                            class="secondary-button">Write
+                                                                            review</a>
+                                                                    </div>
+                                                                    <div class="review-block-body">
+                                                                        <ul>
+                                                                            <li class="item">
+                                                                                <div class="review-form">
+                                                                                    <p class="person">
+                                                                                        Review by Sarah
+                                                                                    </p>
+                                                                                    <p class="mini-text">
+                                                                                        On 7/7/23
+                                                                                    </p>
+                                                                                </div>
+                                                                                <div class="review-rating ratings">
+                                                                                    <div class="stars"></div>
+                                                                                </div>
+                                                                                <div class="review-title">
+                                                                                    <p>Awosome Product!</p>
+                                                                                </div>
+                                                                                <div class="review-text">
+                                                                                    <p>Lorem, ipsum dolor sit amet
+                                                                                        consectetur adipisicing elit.
+                                                                                        Optio dolores temporibus nulla
+                                                                                        animi reprehenderit. Quod
+                                                                                        incidunt consequatur sapiente
+                                                                                        debitis minima!</p>
+                                                                                </div>
+                                                                            </li>
+                                                                            <li class="item">
+                                                                                <div class="review-form">
+                                                                                    <p class="person">
+                                                                                        Review by Faizal
+                                                                                    </p>
+                                                                                    <p class="mini-text">
+                                                                                        On 1/7/23
+                                                                                    </p>
+                                                                                </div>
+                                                                                <div class="review-rating ratings">
+                                                                                    <div class="stars"></div>
+                                                                                </div>
+                                                                                <div class="review-title">
+                                                                                    <p>Awosome Product!</p>
+                                                                                </div>
+                                                                                <div class="review-text">
+                                                                                    <p>Lorem, ipsum dolor sit amet
+                                                                                        consectetur adipisicing elit.
+                                                                                        Optio dolores temporibus nulla
+                                                                                        animi reprehenderit. Quod
+                                                                                        incidunt consequatur sapiente
+                                                                                        debitis minima!</p>
+                                                                                </div>
+                                                                            </li>
+                                                                        </ul>
+                                                                        <div class="second-links"><a href="#"
+                                                                                class="view-all">View all review <i
+                                                                                    class="ri-arrow-right-line"></i></a>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div id="review-form" class="review-form">
+                                                                        <h4>Write a review</h4>
+                                                                        <div class="ratings">
+                                                                            <p>Are you satisfied enough?</p>
+                                                                            <div class="rate-this">
+                                                                                <input type="radio" name="rating"
+                                                                                    id="start5">
+                                                                                <label for="start5">
+                                                                                    <i class="ri-star-fill"></i>
+                                                                                </label>
+
+                                                                                <input type="radio" name="rating"
+                                                                                    id="start4">
+                                                                                <label for="start4">
+                                                                                    <i class="ri-star-fill"></i>
+                                                                                </label>
+
+                                                                                <input type="radio" name="rating"
+                                                                                    id="start3">
+                                                                                <label for="start3">
+                                                                                    <i class="ri-star-fill"></i>
+                                                                                </label>
+
+                                                                                <input type="radio" name="rating"
+                                                                                    id="start2">
+                                                                                <label for="start2">
+                                                                                    <i class="ri-star-fill"></i>
+                                                                                </label>
+
+                                                                                <input type="radio" name="rating"
+                                                                                    id="start1">
+                                                                                <label for="start1">
+                                                                                    <i class="ri-star-fill"></i>
+                                                                                </label>
+                                                                            </div>
+                                                                        </div>
+                                                                        <form action="">
+                                                                            <p>
+                                                                                <label>Name</label>
+                                                                                <input type="text">
+                                                                            </p>
+                                                                            <p>
+                                                                                <label>Summary</label>
+                                                                                <input type="text">
+                                                                            </p>
+                                                                            <p>
+                                                                                <label>Name</label>
+                                                                                <textarea cols="30"
+                                                                                    rows="10"></textarea>
+                                                                            </p>
+                                                                            <p><a href="#" class="primary-button">Submit
+                                                                                    Review</a></p>
+                                                                        </form>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </li>
 
