--- a/offer-page.html
+++ b/offer-page.html
@@ -430,23 +430,18 @@
                                         <div class="big-image">
                                             <div class="big-image-wrapper swiper-wrapper">
                                                 <div class="image-show swiper-slide">
-                                                    <a data-fslightbox href="./assets/img/products/shoe1.jpg">
-                                                        <img src="./assets/img/products/shoe1.jpg" alt="">
+                                                    <a data-fslightbox href="./assets/img/products/apparel4.jpg">
+                                                        <img src="./assets/img/products/apparel4.jpg" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="image-show swiper-slide">
-                                                    <a data-fslightbox href="./assets/img/products/shoe1-1.jpg">
-                                                        <img src="./assets/img/products/shoe1-1.jpg" alt="">
+                                                    <a data-fslightbox href="./assets/img/products/apparel5.jpg">
+                                                        <img src="./assets/img/products/apparel5.jpg" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="image-show swiper-slide">
-                                                    <a data-fslightbox href="./assets/img/products/shoe1-2.jpg">
-                                                        <img src="./assets/img/products/shoe1-2.jpg" alt="">
-                                                    </a>
-                                                </div>
-                                                <div class="image-show swiper-slide">
-                                                    <a data-fslightbox href="./assets/img/products/shoe1-3.jpg">
-                                                        <img src="./assets/img/products/shoe1-3.jpg" alt="">
+                                                    <a data-fslightbox href="./assets/img/products/apparel6.jpg">
+                                                        <img src="./assets/img/products/apparel6.jpg" alt="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -457,25 +452,21 @@
                                         <div thumbSlider="" class="small-image">
                                             <ul class="small-image-wrapper flexitem swiper-wrapper">
                                                 <li class="thumbnail-show swiper-slide">
-                                                    <img src="./assets/img/products/shoe1.jpg" alt="">
+                                                    <img src="./assets/img/products/apparel4.jpg" alt="">
                                                 </li>
                                                 <li class="thumbnail-show swiper-slide">
-                                                    <img src="./assets/img/products/shoe1-1.jpg" alt="">
+                                                    <img src="./assets/img/products/apparel5.jpg" alt="">
                                                 </li>
                                                 <li class="thumbnail-show swiper-slide">
-                                                    <img src="./assets/img/products/shoe1-2.jpg" alt="">
+                                                    <img src="./assets/img/products/apparel6.jpg" alt="">
                                                 </li>
-                                                <li class="thumbnail-show swiper-slide">
-                                                    <img src="./assets/img/products/shoe1-3.jpg" alt="">
-                                                </li>
-
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="item">
-                                        <h1>Men Slip On Shoes Casual With Arch Support Insoles</h1>
+                                        <h1>Happy Sailed Womens Summer Boho Floral</h1>
                                         <div class="content">
                                             <div class="ratings">
                                                 <div class="stars"></div>
@@ -490,7 +481,8 @@
                                                 <span class="current">$80.90</span>
                                                 <span class="normal">$119.90</span>
                                             </div>
-                                            <div class="colors">
+
+                                            <!-- <div class="colors">
                                                 <p>Color</p>
                                                 <div class="variant">
                                                     <form action="">
@@ -508,7 +500,27 @@
                                                         </p>
                                                     </form>
                                                 </div>
+                                            </div> -->
+
+                                            <div class="stock mini-text" data-stock="4000">
+                                                <div class="qty">
+                                                    <span>Sold: <strong class="qty-sold">3459</strong></span>
+                                                    <span>Stock: <strong class="qty-available">1007</strong></span>
+                                                </div>
+                                                <div class="bar">
+                                                    <div class="available"></div>
+                                                </div>
                                             </div>
+                                            <div class="offer">
+                                                <p>Offer ends at</p>
+                                                <ul class="flexcenter">
+                                                    <li>1</li>
+                                                    <li>15</li>
+                                                    <li>27</li>
+                                                    <li>07</li>
+                                                </ul>
+                                            </div>
+
                                             <div class="sizes">
                                                 <p>Size</p>
                                                 <div class="variant">
@@ -776,7 +788,7 @@
 
             <!-- feature section -->
 
-            <div class="features">
+            <div class="related-products">
                 <div class="container">
                     <div class="wrapper">
                         <div class="column">
@@ -807,6 +819,17 @@
                                         <div class="discount cricle flexcenter"><span>31%</span></div>
                                     </div>
                                     <div class="content">
+
+                                        <div class="offer flexitem">
+                                            <p class="mini-text">Offer ends at</p>
+                                            <ul class="flexcenter">
+                                                <li>1</li>
+                                                <li>15</li>
+                                                <li>27</li>
+                                                <li>07</li>
+                                            </ul>
+                                        </div>
+
                                         <div class="ratings">
                                             <div class="stars"></div>
                                             <span class="mini-text">(2,548)</span>
@@ -819,6 +842,15 @@
                                         <div class="price">
                                             <span class="current">$129.99</span>
                                             <span class="normal mini-text">$189.98</span>
+                                        </div>
+                                        <div class="stock mini-text" data-stock="4000">
+                                            <div class="qty">
+                                                <span>Sold: <strong class="qty-sold">3459</strong></span>
+                                                <span>Stock: <strong class="qty-available">1007</strong></span>
+                                            </div>
+                                            <div class="bar">
+                                                <div class="available"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -840,6 +872,15 @@
                                         <div class="discount cricle flexcenter"><span>31%</span></div>
                                     </div>
                                     <div class="content">
+                                        <div class="offer flexitem">
+                                            <p class="mini-text">Offer ends at</p>
+                                            <ul class="flexcenter">
+                                                <li>1</li>
+                                                <li>15</li>
+                                                <li>27</li>
+                                                <li>07</li>
+                                            </ul>
+                                        </div>
                                         <div class="ratings">
                                             <div class="stars"></div>
                                             <span class="mini-text">(2,548)</span>
@@ -853,13 +894,15 @@
                                             <span class="current">$129.99</span>
                                             <span class="normal mini-text">$189.98</span>
                                         </div>
-                                        <!-- footer content -->
-                                        <div class="footer">
-                                            <ul class="mini-text">
-                                                <li>plyester, Cotton</li>
-                                                <li>Pull On Closure</li>
-                                                <li>Fashion Personlity</li>
-                                            </ul>
+
+                                        <div class="stock mini-text" data-stock="4000">
+                                            <div class="qty">
+                                                <span>Sold: <strong class="qty-sold">1025</strong></span>
+                                                <span>Stock: <strong class="qty-available">2395</strong></span>
+                                            </div>
+                                            <div class="bar">
+                                                <div class="available"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
